packages/fxa-content-server/app/styles/modules/_branding.scss
#fox-logo {

  background-image: image-url('firefox-logo.svg');
  background-position: center -1px;
  background-repeat: no-repeat;
  opacity: 0;
  position: relative;
  z-index: $fox-logo-zindex;

  @include respond-to('big') {
    height: 85px;
    margin: 0 auto;
    top: 30px;
    width: 80px;
  }

  @include respond-to('small') {
    background-position-y: 0;
    background-size: auto 55px;
    height: 55px;
    margin: 10px auto 0 auto;
    top: 0;
    width: 100%;
  }

  @include respond-to('trustedUI') {
    display: none;
  }

  .static & {
    opacity: 1;
  }

  // IE < 10 does not support CSS transforms
  .lt-ie10 & {
    opacity: 1;
  }

  .chromeless & {
    display: none;
  }

  .screen-choose-what-to-sync & {
    // the 'choose-what-to-sync' view is a special case view
    // where we want to hide the logo and not animate it
    // it uses `!important` to avoid the fade-in effect and inline styles.
    opacity: 0 !important;
  }
}

#about-mozilla {

  @include respond-to('big') {
    background: image-url('mozilla.svg');
    cursor: pointer;
    height: 30px;
    opacity: 0.5;
    position: absolute;
    right: 12px;
    top: 12px;
    transition: opacity $short-transition;
    width: 94px;

    &:hover {
      opacity: 1;
    }

    &:focus {
      outline-color: $html-background-color;
    }
  }

  @include respond-to('small') {
    display: none;
  }

  // Links to external sites cannot be opened when signing in
  // to Sync on Firefox for iOS
  .chromeless &,
  .fx-ios-sync & {
    display: none;
  }
}


.choose-what-to-sync {
  @include respond-to('trustedUI') {
    // padding-bottom fixes a problem where the "Save settings"
    // button can be cut off in the firstrun flow. See #5273
    padding-bottom: 10px;
  }

  #submit-btn {
    margin-top: 10px;
  }

  #choose-what-to-sync-graphic {
    background: image-url('choose_what_to_sync_devices.svg');
    background-position: center top;
    background-repeat: no-repeat;
    height: 100px;
    margin: 10px auto 10px auto;
    width: 200px;

    @include respond-to('big') {
      background-size: 300px 138px;
      height: 155px;
      margin: 20px auto 0 auto;
      width: 300px;
    }

    @include respond-to('trustedUI') {
      margin: 10px auto 20px auto;
    }
  }

  .success-email-created {
    margin: -35px 0 40px 0;

    @include respond-to('trustedUI') {
      margin-top: -5px;
    }
  }
}

.sms-row {
  position: relative;

  .sms-send {
    background: $button-background-hover-color;
    border: 0;
    color: $message-text-color;
    cursor: pointer;
    font-size: $base-font;
    min-width: 55px;
    padding: 0 7px;
    position: absolute;
    text-align: center;
    top: 1px;
    // it is very easy to accidentally select the text when clicking
    -webkit-touch-callout: none;
    // user select not supported by autoprefixer
    // https://github.com/postcss/autoprefixer/issues/167
    -moz-user-select: none;
    -ms-user-select: none;
    -webkit-user-select: none;
    user-select: none;
    z-index: 3;

    &.disabled {
      background-color: $content-background-color;
      color: $input-placeholder-color;
    }

    html[dir='ltr'] & {
      border-left: 1px solid $input-row-border-color;
      right: 1px;
    }

    html[dir='rtl'] & {
      border-right: 1px solid $input-row-border-color;
      left: 1px;
    }

    @include respond-to('big') {
      border-radius: 0 $small-border-radius $small-border-radius 0;

      height: 43px;
      line-height: 42px;

      html[dir='rtl'] & {
        border-radius: $small-border-radius 0 0 $small-border-radius;
      }
    }

    @include respond-to('small') {
      border-radius: 0;
      height: 38px;
      line-height: 38px;
    }
  }
}

.faint {
  color: $color-grey-faint-text;
}

.sms-disclaimer {
  color: $color-grey-faint-text;
  margin: 10px 0;

  a {
    color: $color-grey-faint-text;
    text-decoration: underline;
  }
}

